feat: add contacts section

--- a/src/assets/scss/layout/_pricing-plans.scss
+++ b/src/assets/scss/layout/_pricing-plans.scss
@@ -5,7 +5,7 @@
 @import "../base/_typography.scss";
 
 .pricing-plans{
-
+    margin-bottom: 57px;
     &__container{
         padding-top: 55px;
     }
