--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -81,3 +81,16 @@
 
     </div>
 </section>
+
+
+
+<section class="map">
+
+    <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d898.3022089397308!2d-80.18991243037345!3d25.763664798584394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDQ1JzQ5LjIiTiA4MMKwMTEnMjEuNCJX!5e0!3m2!1suk!2sua!4v1681468581595!5m2!1suk!2sua" 
+    class="map__wrapper"
+     allowfullscreen="" loading="lazy" 
+    
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
+ 
+</section>
