--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -73,3 +73,10 @@ textarea.form__input::placeholder  {
 .button-contacts{
     margin-left: 459px;
 }
+
+
+.map__wrapper{
+    width: 100%;
+    height: 360px;
+    border: none;
+}
