--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,7 +16,7 @@
 @import "./layout/_prices.scss";
 @import "./layout/_pricing-plans.scss";
 @import "./layout/_contacts.scss";
-
+@import "./layout/_footer.scss";
 @media (min-width: 1400px){
   .container{
     max-width: 1170px ;
