--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -2,46 +2,46 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-  
-    <link rel="stylesheet" href="assets/css/style.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+  <link rel="stylesheet" href="assets/css/style.min.css">
 
 
-  
-    <title>{{title}}</title>
+
+  <title>{{title}}</title>
 </head>
 
 <body>
-    {{> header--top }}
-
-    {{> features }}
+  {{> header--top }}
 
 
-    {{> devices }}
-
-    {{> device }}
-
-    {{> prices }}
-
-    {{> pricing-plans }}
-
-    {{> contacts }}
-
-    {{> footer }}
+  {{> features }}
 
 
-    <script
-     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+  {{> about }}
+
+  {{> device }}
+
+  {{> testimonals }}
+
+  {{> pricing-plans }}
+
+  {{> contacts }}
+
+  {{> footer }}
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
     </script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 
-  <script src="../assets/js/main.min.js"  >
-    
+  <script src="../assets/js/main.min.js">
+
   </script>
 
 </body>
