--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -1,9 +1,9 @@
 @use "../abstracts/_functions.scss" as f;
 @use "../abstracts/_variables.scss" as v;
 @use "../abstracts/_mixins.scss" as m;
-@import "../base/_typography.scss";
 
-.devices{
+
+.about{
     padding-top: 40px;
     &__container{
 
