--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -6,6 +6,7 @@
         <div class="about__content-wrapper col">
             <h3 class="about__sub-title">dip into the details</h3>
             <h2 class="about__title">Beautiful on every device</h2>
+            <span class="lines__about"></span>
             <p class="about__text">
                 Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
                 Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae
