--- a/src/tpl/partials/contacts.html
+++ b/src/tpl/partials/contacts.html
@@ -4,7 +4,7 @@
             <div class="contacts__top-wrapper">
                 <h3 class="contacts__sub-title">STAY IN TOUCH</h3>
                 <h2 class="contacts__title">Contact us</h2>
-                <span class="lines"></span>
+                <span class="lines__contacts"></span>
                 <div class="contacts__items-container  row row-cols-3 ">
                     <div class="contacts__item">
                         <div class="contacts__icon-wrapper">
@@ -58,10 +58,10 @@
                     <div class="form__input-right">
                         <div class="form__input-wrapper" data-validate="Message is required">
 
-                        
+
                             <textarea class="form__input" name="message" placeholder="MESSAGE"></textarea>
-                  
-                   
+
+
 
                         </div>
                     </div>
@@ -83,7 +83,7 @@
 </section>
 
 
-
+<!-- 
 <section class="map">
 
     <iframe 
@@ -95,4 +95,4 @@
 </iframe>
 
  
-</section>
+</section> -->
