--- a/src/tpl/partials/device.html
+++ b/src/tpl/partials/device.html
@@ -4,16 +4,18 @@
             <div class="device__content-wrapper col">
                 <h3 class="device__sub-title">dip into the details</h3>
                 <h2 class="device__title">Super easy to customize</h2>
+                <span class="lines__device"></span>
                 <p class="device__text">
-                    Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. 
-                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. 
+                    Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
+                    vitae erat consequat auctor eu in elit.
                     Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                 </p>
             </div>
             <div class="device__img-container col">
                 <img src="../../assets/images/device.png" alt="" class="device__img">
-            <div>
-        </div>
-    </div>
+                <div>
+                </div>
+            </div>
 
 </section>
