--- a/src/tpl/partials/pricing-plans.html
+++ b/src/tpl/partials/pricing-plans.html
@@ -1,80 +1,84 @@
-    <section class="pricing-plans">
-        <div class="container">
-            <div class="pricing-plans__container">
-                <div class="pricing-plans__top-wrapper">
-                    <h3 class="pricing-plans__sub-title">QUALITY HAS ITS PRICE</h3>
-                    <h2 class="pricing-plans__title">Pricings & Plans</h2>
-                    <span class="lines"></span>
-                </div>
+<section class="pricing-plans">
+    <div class="container">
+        <div class="pricing-plans__container">
+            <div class="pricing-plans__top-wrapper">
+                <h3 class="pricing-plans__sub-title">QUALITY HAS ITS PRICE</h3>
+                <h2 class="pricing-plans__title">Pricings & Plans</h2>
+                <span class="lines__pricing-plans"></span>
             </div>
+        </div>
 
 
-            
-            <div class="cards-container  row row-cols-md-2 row-cols-lg-4  ">
-                <div class="card card-wrapper ">
-                  <div class="card-header card-header__title">FREE</div>
-                  <div class="card-middle__wrapper">
+
+        <div class="cards-container  row row-cols-md-2 row-cols-lg-4  ">
+            <div class="card card-wrapper ">
+                <div class="card-header card-header__title">FREE</div>
+                <div class="card-middle__wrapper">
                     <div class="card__title-wrapper ">
-                    
+
                         <span class="card__dollar">$</span>
                         <h4 class="card__price">0</h4>
                     </div>
-                    <span class="card__month" >/ per month<span>
-                  </div>
-        
-                    <div class="card-body card__bottom-content ">
-                        <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span>lacinia</span>  consectetur.</p>
-                        <button class="button-primary button">ORDER NOW</button>
-                    </div>
+                    <span class="card__month">/ per month<span>
                 </div>
-                <div class="card card-wrapper ">
-                    <div class="card-header card-header__title">PERSONAL</div>
-                    <div class="card-middle__wrapper">
-                      <div class="card__title-wrapper ">
-                      
-                          <span class="card__dollar">$</span>
-                          <h4 class="card__price">25</h4>
-                      </div>
-                      <span class="card__month" >/ per month<span>
+
+                <div class="card-body card__bottom-content ">
+                    <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
+                        ipsum <span>lacinia</span> consectetur.</p>
+                    <button class="button-primary button">ORDER NOW</button>
+                </div>
+            </div>
+            <div class="card card-wrapper ">
+                <div class="card-header card-header__title">PERSONAL</div>
+                <div class="card-middle__wrapper">
+                    <div class="card__title-wrapper ">
+
+                        <span class="card__dollar">$</span>
+                        <h4 class="card__price">25</h4>
                     </div>
-          
-                      <div class="card-body card__bottom-content ">
-                          <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span>lacinia</span>  consectetur.</p>
-                          <button class="button-primary button">ORDER NOW</button>
-                      </div>
-                  </div>
-                  <div class="card card-wrapper ">
-                    <div class="card-header card-header__title">BUSINESS</div>
-                    <div class="card-middle__wrapper">
-                      <div class="card__title-wrapper ">
-                      
-                          <span class="card__dollar">$</span>
-                          <h4 class="card__price">50</h4>
-                      </div>
-                      <span class="card__month" >/ per month<span>
+                    <span class="card__month">/ per month<span>
+                </div>
+
+                <div class="card-body card__bottom-content ">
+                    <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
+                        ipsum <span>lacinia</span> consectetur.</p>
+                    <button class="button-primary button">ORDER NOW</button>
+                </div>
+            </div>
+            <div class="card card-wrapper ">
+                <div class="card-header card-header__title">BUSINESS</div>
+                <div class="card-middle__wrapper">
+                    <div class="card__title-wrapper ">
+
+                        <span class="card__dollar">$</span>
+                        <h4 class="card__price">50</h4>
                     </div>
-          
-                      <div class="card-body card__bottom-content ">
-                          <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span>lacinia</span>  consectetur.</p>
-                          <button class="button-primary button">ORDER NOW</button>
-                      </div>
-                  </div>
-                  <div class="card card-wrapper ">
-                    <div class="card-header card-header__title">ULTIMATE</div>
-                    <div class="card-middle__wrapper">
-                      <div class="card__title-wrapper ">
-                      
-                          <span class="card__dollar">$</span>
-                          <h4 class="card__price">99</h4>
-                      </div>
-                      <span class="card__month" >/ per month<span>
+                    <span class="card__month">/ per month<span>
+                </div>
+
+                <div class="card-body card__bottom-content ">
+                    <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
+                        ipsum <span>lacinia</span> consectetur.</p>
+                    <button class="button-primary button">ORDER NOW</button>
+                </div>
+            </div>
+            <div class="card card-wrapper ">
+                <div class="card-header card-header__title">ULTIMATE</div>
+                <div class="card-middle__wrapper">
+                    <div class="card__title-wrapper ">
+
+                        <span class="card__dollar">$</span>
+                        <h4 class="card__price">99</h4>
                     </div>
-          
-                      <div class="card-body card__bottom-content ">
-                          <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span>lacinia</span>  consectetur.</p>
-                          <button class="button-primary button">ORDER NOW</button>
-                      </div>
-                  </div>
+                    <span class="card__month">/ per month<span>
+                </div>
+
+                <div class="card-body card__bottom-content ">
+                    <p class="card__description">Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non
+                        ipsum <span>lacinia</span> consectetur.</p>
+                    <button class="button-primary button">ORDER NOW</button>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
