--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -4,7 +4,7 @@
             <div class="testimonals__top-wrapper">
                 <h3 class="testimonals__sub-title">QUALITY HAS ITS PRICE </h3>
                 <h2 class="testimonals__title"> Pricings & Plans</h2>
-                <span class="lines"></span>
+                <span class="lines__testimonals"></span>
             </div>
 
             <div class="slider swiper-container">
