--- a/src/assets/scss/layout/_device.scss
+++ b/src/assets/scss/layout/_device.scss
@@ -22,6 +22,7 @@
     &__text{
         @include m.section-text;
         margin-right: -38px;
+        padding-top: 50px;
     } 
     &__container{
         display: flex;
