--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -17,7 +17,7 @@
   &__subtitle-container{
     display: flex;
     flex-direction: row;
-    font-size: 9px;
+    @include m.header-subtitle;
   }
   &__bg{
     background-image: url("../images/header-bg.png"); 
@@ -37,6 +37,9 @@
   padding-top: 30px;
   &__link{
     color: v.$header-nav-color;
+  }
+  &-brand{
+    gap: 7px;
   }
   
 }
