--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./abstracts/_variables.scss";
 @import "./abstracts/_mixins.scss";
 @import "./components/_buttons.scss";
+@import "./components/_lines.scss";
 @import "./components/_cards.scss";
 @import "./components/_form.scss";
 @import "./components/_slider.scss";
