--- a/src/tpl/partials/features.html
+++ b/src/tpl/partials/features.html
@@ -4,10 +4,10 @@
             <div class="features__top-wrapper">
                 <h3 class="features__sub-title">product overwiew </h3>
                 <h2 class="features__title"> List of amazing features</h2>
-                <span  class="lines" ></span>
+                <span class="lines__features"></span>
             </div>
 
-        
+
 
             <div class="features__list-container row">
                 <div class="features__list-item__wrapper col-3">
@@ -18,7 +18,7 @@
                     <h4 class="features__item-title">Responsive</h4>
                     <p class="features__item-text">
                         Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
-                    </p>    
+                    </p>
                 </div>
                 <div class="features__list-item__wrapper col-3">
                     <div class="features__icon-wrapper">
