--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./components/_cards.scss";
 @import "./components/_form.scss";
 @import "./components/_slider.scss";
+@import "./components/_hamburger-menu.scss";
 @import "./components/_map.scss";
 @import "./layout/_header.scss";
 @import "./layout/_introduction.scss";
