--- a/src/tpl/partials/features.html
+++ b/src/tpl/partials/features.html
@@ -1,4 +1,4 @@
-<section class="features">
+<section class="features " id="features">
     <div class="container">
         <div class="features__container row">
             <div class="features__top-wrapper">
