--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -13,7 +13,8 @@
         </a>
 
 
-        <ul class="nav navbar-nav header__nav  d-flex flex-row ">
+
+        <ul class="nav navbar-nav header__nav  d-flex flex-row  ">
           <li class="navbar__item "><a class="navbar__link " href="#">Home</a></li>
           <li class="navbar__item "><a class="navbar__link " href="#">Features</a></li>
           <li class="navbar__item "><a class="navbar__link " href="#">About</a></li>
@@ -23,12 +24,39 @@
 
         </ul>
 
+
+
+
+
       </nav>
+
+      <nav class="navbar__mob">
+        <ul class="nav-list__mob">
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Home</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#features">Features</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">About</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Testimonals</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Pricing</a></li>
+          <li class="navbar__item-mob"><a class="navbar__link-mob" href="#home">Contact</a></li>
+        </ul>
+      </nav>
+
+
+      <span class="hamburger">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </span>
+
+
+
+
 
     </div>
   </header>
 
-  <section class="introduction  ">
+  <section class="introduction #  " id="home">
 
     <div class="container">
       <div class="introduction__container  row ">
