--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+
+  <div class="overlay"></div>
+
+
   {{> header--top }}
 
 
@@ -40,7 +44,8 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 
-  <script src="../assets/js/main.min.js">
+
+  <script src="./assets/js/main.min.js">
 
   </script>
 
