--- a/src/tpl/partials/features.html
+++ b/src/tpl/partials/features.html
@@ -8,11 +8,9 @@
             </div>
 
 
-
             <div class="features__list-container row">
-                <div class="features__list-item__wrapper col-3">
+                <div class="features__list-item__wrapper col-lg-3 col-md-6 col-sm-12">
                     <div class="features__icon-wrapper">
-
                         <span class="features__icon"></span>
                     </div>
                     <h4 class="features__item-title">Responsive</h4>
@@ -20,17 +18,16 @@
                         Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
-                <div class="features__list-item__wrapper col-3">
+                <div class="features__list-item__wrapper col-lg-3 col-md-6 col-sm-12">
                     <div class="features__icon-wrapper">
                         <span class="features__icon"></span>
-
                     </div>
                     <h4 class="features__item-title">Customizable</h4>
                     <p class="features__item-text">
                         Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
-                <div class="features__list-item__wrapper col-3">
+                <div class="features__list-item__wrapper col-lg-3 col-md-6 col-sm-12">
                     <div class="features__icon-wrapper">
                         <span class="features__icon"></span>
                     </div>
@@ -39,7 +36,7 @@
                         Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
-                <div class="features__list-item__wrapper col-3">
+                <div class="features__list-item__wrapper col-lg-3 col-md-6 col-sm-12">
                     <div class="features__icon-wrapper">
                         <span class="features__icon"></span>
                     </div>
