--- a/src/assets/scss/components/_hamburger-menu.scss
+++ b/src/assets/scss/components/_hamburger-menu.scss
@@ -6,12 +6,13 @@
 
 
 .hamburger{
+  
   cursor: pointer;
   position: fixed;
   top: 30px;
   right: 20px;
   z-index: 10;
-  display: inline-block;
+  display: none;
   transition: 0.5s ease;
   &-line{
     background-color: hsla(0,0%,100%,.2);
@@ -94,4 +95,10 @@
 
   body.lock{
     overflow: hidden;
+  }
+
+  @media (max-width: 767px){
+    .hamburger{
+      display: inline-block;
+    }
   }
