--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -27,19 +27,25 @@
 
 @media (min-width: 1400px){
   .container{
-    max-width: 1170px ;
+    max-width: 1194px;
   }
 }
 
 @media (min-width: 1200px){
   .container{
-    max-width: 1170px ;
+    max-width: 1194px;
   }
 }
 
-.container{
-  padding: 0 !important;
+
+@media (max-width: 575px){
+  .container{
+    padding: 0px 30px;
+  }
 }
+
+
+
 
 html, body{
   transition-duration: .5s;
