fix: adaptive for device, testimonals, pricing-plans, contacts and footer sections

--- a/src/assets/scss/components/_cards.scss
+++ b/src/assets/scss/components/_cards.scss
@@ -92,5 +92,11 @@
 
 }
 
+@media (max-width:1999px){
 
-                  
+    .cards-container{
+    justify-content: center;
+
+    }
+               
+}
