--- a/src/assets/scss/layout/_contacts.scss
+++ b/src/assets/scss/layout/_contacts.scss
@@ -25,6 +25,7 @@
     &__items-container{
         text-align: initial;
         padding-top: 90px;
+        justify-content: center;
     }
     &__icon-wrapper{
 
