--- a/src/assets/scss/layout/_testimonals.scss
+++ b/src/assets/scss/layout/_testimonals.scss
@@ -8,7 +8,7 @@
     background-image: url("../images/prices-bg.png"); 
     width: 100%; 
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     position: relative;
     height: 639px;
     &__container{
@@ -49,6 +49,38 @@
     }
 }
 
+
+@media (max-width: 991px){
+    .testimonals{
+
+        &__bottom-container{
+            flex-direction: column;
+            gap: 15px;
+        }
+    }
+ }
+
+ 
+
+
+
+@media (max-width: 767px){
+    .testimonals{
+
+        height: 780px;
+    }
+ }
+
+
+@media (max-width: 350px){
+    .testimonals{
+        &__btn-container{
+            flex-direction: column;
+        }
+    }
+ }
+
+ 
 
 
 
