--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -29,14 +29,14 @@
 
 
   {{> device }}
-  <!--
+ 
   {{> testimonals }}
-
+ 
   {{> pricing-plans }}
 
   {{> contacts }}
 
-  {{> footer }} -->
+  {{> footer }} <!---->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
