--- a/src/tpl/partials/testimonals.html
+++ b/src/tpl/partials/testimonals.html
@@ -11,7 +11,7 @@
                 <div class=" slider__wrapper swiper-wrapper">
                     <div class="slider__slide swiper-slide">
                         <div class="slider-content__wrapper">
-                            <div class="slider__item-wapper">
+                            <div class="slider__item-wrapper">
                                 <p class="slider__text">
                                     Once upon a time all the Rivers combined to protest against the action of the Sea in
                                     making their waters salt. “When we come to you,” said they to the Sea.
@@ -146,7 +146,7 @@
 </section>
 
 
-<section class="testimonals__bottom-content">
+ <section class="testimonals__bottom-content">
     <div class="container testimonals__bottom-container">
         <h2 class="testimonals__bottom-title">Like what you see? <span>Get this great theme now!</span> </h2>
         <div class="testimonals__btn-container ">
@@ -155,4 +155,4 @@
         </div>
     </div>
 
-</section>
+</section> 
